--- a/www/lang/en.json
+++ b/www/lang/en.json
@@ -12,7 +12,7 @@
     "about": "About",
     "percent": "Percent",
     "total": "Total",
-    "needtranlate": "Need Translate",
+    "needtranslate": "NeedTranslate",
     "fuzzy": "Fuzzy",
     "send": "Send",
     "suggest": "Suggest",
