--- a/www/lang/tr.json
+++ b/www/lang/tr.json
@@ -11,7 +11,7 @@
     "about": "Hakkında",
     "percent": "İlerleme",
     "total": "Toplam",
-    "needtranlate": "Çevirilmemiş",
+    "needtranslate": "Çevirilmemiş",
     "fuzzy": "Çalışma Gerekli",
     "send": "Gönder",
     "suggest": "Öner",
