--- a/pootle/locales/tr/app.properties
+++ b/pootle/locales/tr/app.properties
@@ -16,3 +16,13 @@ cg=ÇEVİRİ GEREKLİ
 text=Kullanıcı Önerileri
 sil=SİL
 siltext=Silmek istediğiniz liste elemanına dokununuz
+out=Hakkında
+ver=Versiyon
+dev=Geliştirici
+deve=Geliştiricinin e-maili
+lis=LİSANS
+co=KODLAR
+lcss=Diller
+pcss=Projeler
+fcss=Dosyalar
+
